[validation] fix bug in SnomedQueryValidationRuleEvaluator
Apply unpublished effective time filter only if the `isUnpublishedOnly`
rule parameter is set to `true`.
Migrate generic SNOMED rule tests to new BaseValidationTest.